compiler/lume_parser/src/snapshots/lume_parser__parser__tests__array_snapshots@empty.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"let _ = [];\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: "void",
                        location: Location(
                            13..17,
                        ),
                    },
                ),
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: Array(
                                Array {
                                    values: [],
                                    location: Location(
                                        28..29,
                                    ),
                                },
                            ),
                            location: Location(
                                20..31,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..33,
                ),
            },
            location: Location(
                0..33,
            ),
            documentation: None,
        },
    ),
]
