compiler/lume_parser/src/snapshots/lume_parser__parser__tests__array_snapshots@nested.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"let _ = [a, [a, b]];\")"
---
[
    VariableDeclaration(
        VariableDeclaration {
            name: Identifier {
                name: "_",
                location: Location(
                    4..5,
                ),
            },
            variable_type: None,
            value: Array(
                Array {
                    values: [
                        Variable(
                            Variable {
                                name: Identifier {
                                    name: "a",
                                    location: Location(
                                        9..10,
                                    ),
                                },
                            },
                        ),
                        Array(
                            Array {
                                values: [
                                    Variable(
                                        Variable {
                                            name: Identifier {
                                                name: "a",
                                                location: Location(
                                                    13..14,
                                                ),
                                            },
                                        },
                                    ),
                                    Variable(
                                        Variable {
                                            name: Identifier {
                                                name: "b",
                                                location: Location(
                                                    16..17,
                                                ),
                                            },
                                        },
                                    ),
                                ],
                                location: Location(
                                    12..13,
                                ),
                            },
                        ),
                    ],
                    location: Location(
                        8..9,
                    ),
                },
            ),
            location: Location(
                0..20,
            ),
        },
    ),
]
