compiler/lume_parser/src/snapshots/lume_parser__parser__tests__array_snapshots@single.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"let _ = [a];\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: Path {
                            name: Identifier {
                                name: "void",
                                location: Location(
                                    13..17,
                                ),
                            },
                            root: NamespacePath {
                                path: [],
                                location: Location(
                                    0..0,
                                ),
                            },
                            location: Location(
                                13..17,
                            ),
                        },
                    },
                ),
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: Array(
                                Array {
                                    values: [
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "a",
                                                    location: Location(
                                                        29..30,
                                                    ),
                                                },
                                            },
                                        ),
                                    ],
                                    location: Location(
                                        28..29,
                                    ),
                                },
                            ),
                            location: Location(
                                20..32,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..34,
                ),
            },
            location: Location(
                0..34,
            ),
            documentation: None,
        },
    ),
]
