compiler/lume_parser/src/snapshots/lume_parser__parser__tests__call_snapshots@method_generic.snap
---
source: compiler/lume_parser/src/parser.rs
expression: "parse_expr(\"let _ = a.call<T>(a, b);\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Some(
                Scalar(
                    ScalarType {
                        name: Path {
                            name: Identifier {
                                name: "void",
                                location: Location(
                                    13..17,
                                ),
                            },
                            root: NamespacePath {
                                path: [],
                                location: Location(
                                    0..0,
                                ),
                            },
                            location: Location(
                                13..17,
                            ),
                        },
                    },
                ),
            ),
            block: Block {
                statements: [
                    VariableDeclaration(
                        VariableDeclaration {
                            name: Identifier {
                                name: "_",
                                location: Location(
                                    24..25,
                                ),
                            },
                            variable_type: None,
                            value: Call(
                                Call {
                                    callee: Some(
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "a",
                                                    location: Location(
                                                        28..29,
                                                    ),
                                                },
                                            },
                                        ),
                                    ),
                                    name: Path {
                                        name: Identifier {
                                            name: "call",
                                            location: Location(
                                                30..34,
                                            ),
                                        },
                                        root: NamespacePath {
                                            path: [],
                                            location: Location(
                                                0..0,
                                            ),
                                        },
                                        location: Location(
                                            30..34,
                                        ),
                                    },
                                    arguments: [
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "a",
                                                    location: Location(
                                                        38..39,
                                                    ),
                                                },
                                            },
                                        ),
                                        Variable(
                                            Variable {
                                                name: Identifier {
                                                    name: "b",
                                                    location: Location(
                                                        41..42,
                                                    ),
                                                },
                                            },
                                        ),
                                    ],
                                    type_parameters: [
                                        TypeParameter {
                                            name: Identifier {
                                                name: "T",
                                                location: Location(
                                                    35..36,
                                                ),
                                            },
                                            constraints: [],
                                        },
                                    ],
                                    location: Location(
                                        30..42,
                                    ),
                                },
                            ),
                            location: Location(
                                20..44,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..46,
                ),
            },
            location: Location(
                0..46,
            ),
            documentation: None,
        },
    ),
]
